add general structure of application

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,8 @@
 @import "scss/all";
 @import "scss/reset";
 @import "scss/root";
+
+body {
+  background-color: $body-bg-color;
+  color: $body-text-color;
+}
