--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -2,7 +2,7 @@
 =            Global text colors               =
 =============================================*/
 
-$body-text-color: var(--flex-body-text-color, $black) !default;
+$body-text-color: var(--flex-body-text-color, $white) !default;
 $body-bg-color: var(--flex-body-bg-color, $white) !default;
 
 /*=====  End of global text colors  ======*/
