add search input component

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 @import "scss/all";
 @import "scss/reset";
 @import "scss/root";
+@import "scss/utilities";
 
 body {
   background-color: $body-bg-color;
