--- a/src/scss/_root.scss
+++ b/src/scss/_root.scss
@@ -12,6 +12,10 @@
   --flex-body-font-size: #{$fs-base};
   --flex-body-font-weight: #{$fw-normal};
 
+  --flex-search-input-color: #{$gray};
+  --flex-search-input-bg-color: #{$white};
+  --flex-search-input-border-color: #{$gray};
+
   --flex-h1-font-size: #{$h-1};
   --flex-h2-font-size: #{$h-2};
   --flex-h3-font-size: #{$h-3};
