--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -39,6 +39,14 @@ $fs-base: 1rem; //16px
 $fs-lg: 1.125rem; //18px
 $fs-xl: 1.375rem; //22px
 
+$font-sizes: (
+  xxs: $fs-xxs,
+  xs: $fs-xs,
+  sm: $fs-sm,
+  base: $fs-base,
+  lg: $fs-lg,
+  xl: $fs-xl,
+);
 /*----------  Heading font sizes  ----------*/
 
 $h-1: 2rem; //32px
