fix search input border structure

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -42,7 +42,7 @@ $search-input-color: var(--flex-search-input-color, $gray) !default;
 $search-input-bg-color: var(--flex-search-input-bg-color, $white) !default;
 $search-input-border-color: var(
   --flex-search-input-border-color,
-  $gray
+  $light-gray
 ) !default;
 
 /*=====  End of SearchInput  ======*/
