--- a/src/scss/_root.scss
+++ b/src/scss/_root.scss
@@ -14,7 +14,7 @@
 
   --flex-search-input-color: #{$gray};
   --flex-search-input-bg-color: #{$white};
-  --flex-search-input-border-color: #{$gray};
+  --flex-search-input-border-color: #{$light-gray};
 
   --flex-h1-font-size: #{$h-1};
   --flex-h2-font-size: #{$h-2};
