--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -10,7 +10,7 @@ $gold: #d4a120;
 
 $white: #fff;
 $white-dark: #e1e3e4;
-$light-gray: #a8a8a8;
+$light-gray: #d3d3d3;
 $gray: #6c6c6c;
 
 /*----------  Utility Colors  ----------*/
