--- a/src/scss/_root.scss
+++ b/src/scss/_root.scss
@@ -3,8 +3,7 @@
   --flex-body-bg-color: #{$white};
 
   --flex-btn-primary-color: #{$white};
-  --flex-btn-primary-bg: #{$light-blue 0%, $blue 100%};
-  --flex-btn-primary-bg-hover: #{$blue 0%, $light-blue 100%};
+  --flex-btn-primary-bg: #{$blue};
 
   --flex-btn-secondary-color: #{$blue};
   --flex-btn-secondary-bg-color: #{$white};
