fix some button design issues

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -16,6 +16,7 @@
   }
   &-icon {
     @include btnProps(transparent, $blue, transparent);
+    @include padding("none");
     &__right {
       @include margin-left("xxxs");
     }
