--- a/src/scss/_root.scss
+++ b/src/scss/_root.scss
@@ -16,6 +16,10 @@
   --flex-search-input-bg-color: #{$white};
   --flex-search-input-border-color: #{$light-gray};
 
+  --flex-note-card-heading-color: #{$black};
+  --flex-note-card-bg-color: #{$white-dark};
+  --flex-note-card-footer-color: #{$gray};
+
   --flex-h1-font-size: #{$h-1};
   --flex-h2-font-size: #{$h-2};
   --flex-h3-font-size: #{$h-3};
