add horizontal line component

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -48,3 +48,8 @@ $note-card-heading-color: var(--flex-note-card-heading-color, $black) !default;
 $note-card-bg-color: var(--flex-note-card-bg-color, $white-dark) !default;
 $note-card-footer-color: var(--flex-note-card-footer-color, $gray) !default;
 /*=====  End of Note Card  ======*/
+
+/*=============================================
+=            Horizontal Line            =
+=============================================*/
+$horizontal-line-color: var(--flex-horizontal-line, $gray) !default;
