--- a/src/scss/_root.scss
+++ b/src/scss/_root.scss
@@ -20,6 +20,8 @@
   --flex-note-card-bg-color: #{$white-dark};
   --flex-note-card-footer-color: #{$gray};
 
+  --flex-horizontal-line: #{$light-gray};
+
   --flex-h1-font-size: #{$h-1};
   --flex-h2-font-size: #{$h-2};
   --flex-h3-font-size: #{$h-3};
