--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,8 +9,8 @@ $gold: #d4a120;
 /*----------  Neutral Colors  ----------*/
 
 $white: #fff;
-$white-dark: #e1e3e4;
-$light-gray: #d3d3d3;
+$white-dark: #dddddd;
+$light-gray: #dcdcdc;
 $gray: #6c6c6c;
 
 /*----------  Utility Colors  ----------*/
