add notes list component

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,7 +9,7 @@ $gold: #d4a120;
 /*----------  Neutral Colors  ----------*/
 
 $white: #fff;
-$white-dark: #dddddd;
+$white-dark: #f6f6f6;
 $light-gray: #dcdcdc;
 $gray: #6c6c6c;
 
